Fixed layout on addJoke page when viewed on small window.

--- a/ca.footeware.web/src/main/resources/static/styles/screen.css
+++ b/ca.footeware.web/src/main/resources/static/styles/screen.css
@@ -147,3 +147,11 @@ img.bordered{
 	margin-left: 47%;
 	margin-top: 25px;
 }
+
+input#title{
+	width:100%;
+}
+
+textarea#body{
+	width:100%;
+}
